[package]
name = "minio-rust"
version = "0.1.0"
edition = "2021"
description = "An experimental Rust port of the MinIO object storage server"
license = "AGPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Rana-Faraz/minio-rust"
homepage = "https://github.com/Rana-Faraz/minio-rust"
keywords = ["minio", "s3", "object-storage", "storage"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = true }
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
rustls = "0.23"
rustls-pemfile = "2"
aes-gcm = "0.10"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
snap = "1"
hex = "0.4"
hmac = "0.12"
md-5 = "0.10"
blake2 = "0.10"
highway = "1"
sha2 = "0.10"
sha1 = "0.10"
crc = "3"
libc = "0.2"
tempfile = "3"
x509-parser = "0.16"
quick-xml = { version = "0.37", features = ["serialize"] }
parquet = "53"
bytes = "1"
roxmltree = "0.20"
rmp-serde = "1.3"
url = "2"
reed-solomon-erasure = "6"
bincode = "1.3"
tiny_http = "0.12"
percent-encoding = "2"
ureq = "2"
mysql = { version = "26", default-features = false, features = ["minimal", "rustls-tls", "chrono"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
amiquip = "0.4"
rumqttc = { version = "0.24", default-features = false, features = ["use-rustls"] }
kafka = "0.10"

[lib]
path = "src/lib.rs"
